--- a/trunk/ ttdc --username trevisthomas/River/war/css/common/icons/richtext2-light.css
+++ b/trunk/ ttdc --username trevisthomas/River/war/css/common/icons/richtext2-light.css
@@ -1,3 +1,4 @@
+/*TODO: delete used by old Rich text*/
 .icon_toolbar_button {background-image:url('richtext_icons_light.png'); width:20px; height:20px;}
 .icon_blue{ background-position: -20px 0;}
 .icon_red{ background-position: 0 0; }
