--- a/trunk/ ttdc --username trevisthomas/River/war/css/light.css
+++ b/trunk/ ttdc --username trevisthomas/River/war/css/light.css
@@ -27,14 +27,16 @@ body{ color: #222; background-color: #eee;}
 .tt-active-post-links-hover a:link,
 .tt-more-comments a:link,
 .tt-traffic-login a:link,
-.tt-post-summary a:link {text-decoration: none; color: #113aa4;}
+.tt-post-summary a:link,
+.tt-post-expanded-content a:link  {text-decoration: none; color: #113aa4;}
 
 .tt-post-panel-content a:visited, 
 .tt-post-panel-head	a:visited,
 .tt-active-post-links-hover a:visited,
 .tt-more-comments a:visited,
 .tt-traffic-login a:visited,
-.tt-post-summary a:visited {text-decoration: none; color: #113aa4;}
+.tt-post-summary a:visited,
+.tt-post-expanded-content a:visited  {text-decoration: none; color: #113aa4;}
 
 
 .tt-post-panel-content a:hover,
@@ -42,14 +44,16 @@ body{ color: #222; background-color: #eee;}
 .tt-active-post-links-hover a:hover,
 .tt-more-comments a:hover,
 .tt-traffic-login a:hover,
-.tt-post-summary a:hover {text-decoration: underline; color: blue;}
+.tt-post-summary a:hover,
+.tt-post-expanded-content a:hover  {text-decoration: underline; color: blue;}
 
 .tt-post-panel-content a:active,
 .tt-post-panel-head	a:active,
 .tt-active-post-links-hover a:active,
 .tt-more-comments a:active,
 .tt-traffic-login a:active,
-.tt-post-summary a:active {color: #F5F23B;}
+.tt-post-summary a:active,
+.tt-post-expanded-content a:active  {color: #F5F23B;}
 
 .tt-active-post-links a:link{text-decoration: none; color: #ECECEC;}
 .tt-active-post-links a:visited{text-decoration: none; color: #ECECEC;}
@@ -69,8 +73,7 @@ body{ color: #222; background-color: #eee;}
 .popupContent a:link,
 .tt-welcome a:link,
 .tt-navigation a:link,	
-.tt-reviewSummaryList a:link,
-.tt-post-expanded a:link {text-decoration: none; color: black;}
+.tt-reviewSummaryList a:link {text-decoration: none; color: black;}
 
 .tt-post-panel-head-title a:visited,
 .tt-user-list-table a:visited,
@@ -82,8 +85,7 @@ body{ color: #222; background-color: #eee;}
 .popupContent a:visited,
 .tt-welcome a:visited,
 .tt-navigation a:visited,	
-.tt-reviewSummaryList a:visited,
-.tt-post-expanded a:visited {text-decoration: none; color: black;}
+.tt-reviewSummaryList a:visited{text-decoration: none; color: black;}
 
 .tt-post-panel-head-title a:hover,
 .tt-user-list-table a:hover,
@@ -95,8 +97,7 @@ body{ color: #222; background-color: #eee;}
 .popupContent a:hover,
 .tt-welcome a:hover,
 .tt-navigation a:hover,	
-.tt-reviewSummaryList a:hover,
-.tt-post-expanded a:hover {text-decoration: underline; color: #222;}
+.tt-reviewSummaryList a:hover {text-decoration: underline; color: #222;}
 
 .tt-post-panel-head-title a:active,
 .tt-user-list-table a:active,
@@ -108,8 +109,7 @@ body{ color: #222; background-color: #eee;}
 .popupContent a:active,
 .tt-welcome a:active,
 .tt-navigation a:active,		
-.tt-reviewSummaryList a:active,
-.tt-post-expanded a:active {color: #F5F23B;}
+.tt-reviewSummaryList a:active {color: #F5F23B;}
 
 
 
