--- a/ ttdc --username trevisthomas/River/war/css/structure.css
+++ b/ ttdc --username trevisthomas/River/war/css/structure.css
@@ -32,6 +32,7 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-post-panel-head-date,
 .tt-text-small{font-size:10px;}
 	
+.tt-plain-post-header,
 .tt-traffic-login,
 .tt-reviewSummary,
 .tt-options-button,
@@ -66,7 +67,7 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-comment-editor{border: 1px solid; width:480px; padding: 2px 10px;}
 .tt-comment-toolbar{margin: 2px 0;}
 .tt-rich-text-iframe{width: 478px; margin: 4px 0;}
-.tt-comment-editor-buttons{float: right;}
+.tt-comment-editor-buttons{float: right; margin: 3px;}
 
 .tt-post-panel-content{ width:100%; clear:both;}
 .tt-post-panel-head{border-style: solid; border-width: 0 0 1px 0;}
@@ -365,5 +366,8 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 
 
 .tt-comment-editor{}
-.tt-comment-textarea{width: 100%;}
+.tt-comment-textarea{width: 100%; height: 200px;}
+.tt-comment-preview{width: 100%; max-height: 200px; overflow-y: scroll; overflow-x: auto;}
 .tt-comment-toolbar{width: 100%;}
+
+.tt-plain-post{border: 1px solid; margin: 4px; padding: 2px;}
