--- a/trunk/ ttdc --username trevisthomas/River/war/css/light.css
+++ b/trunk/ ttdc --username trevisthomas/River/war/css/light.css
@@ -60,7 +60,9 @@ body{ color: #222; background-color: #eee;}
 .tt-active-post-links a:hover{text-decoration: underline; color: #ECECEC;}
 .tt-active-post-links a:active{color: #ECECEC;}
 
+.tt-post-fetch-more,
 .tt-active-post-links-hover{color:#113aa4;}
+
 .tt-active-post-links{color:#ECECEC;}
 
 .tt-post-panel-head-title a:link,
@@ -240,5 +242,8 @@ body{ color: #222; background-color: #eee;}
 .gwt-SuggestBoxPopup .item { color: #424242;}
 .gwt-SuggestBoxPopup .item-selected { background: #b7d6f6; }
 .gwt-SuggestBoxPopup .suggestPopupContent { background: white;}
+
+.tt-plain-post{border-color: grey; background: #f5f5f5;}
+
 
 
