--- a/ ttdc --username trevisthomas/River/war/css/light.css
+++ b/ ttdc --username trevisthomas/River/war/css/light.css
@@ -22,6 +22,7 @@ body{ color: #222; background-color: #eee;}
 .tt-post-panel-content a:active {color: #F5F23B;}
 */
 
+.tt-child-post-header a:link,
 .tt-post-panel-content a:link,
 .tt-post-panel-head	a:link,
 .tt-active-post-links-hover a:link,
@@ -30,6 +31,7 @@ body{ color: #222; background-color: #eee;}
 .tt-post-summary a:link,
 .tt-post-expanded-content a:link  {text-decoration: none; color: #113aa4;}
 
+.tt-child-post-header a:visited,
 .tt-post-panel-content a:visited, 
 .tt-post-panel-head	a:visited,
 .tt-active-post-links-hover a:visited,
@@ -39,6 +41,7 @@ body{ color: #222; background-color: #eee;}
 .tt-post-expanded-content a:visited  {text-decoration: none; color: #113aa4;}
 
 
+.tt-child-post-header a:hover,
 .tt-post-panel-content a:hover,
 .tt-post-panel-head	a:hover,
 .tt-active-post-links-hover a:hover,
@@ -47,6 +50,7 @@ body{ color: #222; background-color: #eee;}
 .tt-post-summary a:hover,
 .tt-post-expanded-content a:hover  {text-decoration: underline; color: blue;}
 
+.tt-child-post-header a:active,
 .tt-post-panel-content a:active,
 .tt-post-panel-head	a:active,
 .tt-active-post-links-hover a:active,
@@ -60,10 +64,13 @@ body{ color: #222; background-color: #eee;}
 .tt-active-post-links a:hover{text-decoration: underline; color: #ECECEC;}
 .tt-active-post-links a:active{color: #ECECEC;}
 
+.tt-plain-post-close,
+.tt-child-post-inReplyAnchor,
 .tt-post-fetch-more,
 .tt-active-post-links-hover{color:#113aa4;}
 
 .tt-active-post-links{color:#ECECEC;}
+
 
 .tt-post-panel-head-title a:link,
 .tt-user-list-table a:link,
@@ -112,6 +119,12 @@ body{ color: #222; background-color: #eee;}
 .tt-welcome a:active,
 .tt-navigation a:active,		
 .tt-reviewSummaryList a:active {color: #F5F23B;}
+
+.tt-post-child-date a:link {text-decoration: none; color: grey;}
+.tt-post-child-date a:visited{text-decoration: none; color: grey;}
+.tt-post-child-date a:hover {text-decoration: underline; color: #222;}
+.tt-post-child-date a:active{color: black;}
+	
 
 
 
@@ -244,6 +257,8 @@ body{ color: #222; background-color: #eee;}
 .gwt-SuggestBoxPopup .suggestPopupContent { background: white;}
 
 .tt-plain-post{border-color: grey; background: #f5f5f5;}
+
+.tt-post-child{border-color: #f5f5f5;}
 
 
 
