parking for dinner and dancing.  Mostly complete with the new slim line features that scrain asked for. Holy shit that looks good.

--- a/ ttdc --username trevisthomas/River/war/css/common/icons/icons-common.css
+++ b/ ttdc --username trevisthomas/River/war/css/common/icons/icons-common.css
@@ -4,3 +4,5 @@
 .tt-icon-common-lock{ background-position: -32px 0; }
 .tt-icon-common-read{ background-position: -48 0; }
 .tt-icon-common-unread{ background-position: -64 0; }
+.tt-icon-thumbsup{ background-position: -80 0; }
+.tt-icon-thumbsdown{ background-position: -96 0; }
