--- a/trunk/ ttdc --username trevisthomas/River/war/css/structure.css
+++ b/trunk/ ttdc --username trevisthomas/River/war/css/structure.css
@@ -99,7 +99,7 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-forum-topics,
 .tt-topic-root,
 .tt-topic-topics,
-.tt-home-main{ width: 550px;}
+.tt-home-main{ width: 600px;}
 .tt-home-left{ width: 220px;}
 
 .tt-topic-root,
@@ -407,8 +407,10 @@ side effects in non mozilla browsers in the comment creator
 
 
 .tt-comment-editor{}
+.tt-comment-editor-th{width: 90px;}
+.tt-description-textarea{width: 100%; height: 70px;}
 .tt-comment-textarea{width: 100%; height: 200px;}
-.tt-comment-preview{width: 100%; max-height: 200px; overflow-y: scroll; overflow-x: auto;}
+.tt-comment-preview{width: 100%; max-height: 200px; overflow-y: auto; overflow-x: auto;}
 .tt-comment-toolbar{width: 100%;}
 
 .tt-plain-post{border: 1px solid; margin: 4px; padding: 2px;}
