Edit Title on root posts. Deleted posts behave as deleted Server Broadcaster tells clients with invalid id's to reconnect ApplicaitonProperties has more substance.

--- a/ ttdc --username trevisthomas/River/war/css/common/icons/icons-common.css
+++ b/ ttdc --username trevisthomas/River/war/css/common/icons/icons-common.css
@@ -6,3 +6,4 @@
 .tt-icon-common-unread{ background-position: -64 0; }
 .tt-icon-thumbsup{ background-position: -80 0; }
 .tt-icon-thumbsdown{ background-position: -96 0; }
+.tt-icon-common-deleted{ background-position: -112 0; }
